force-app/main/default/objects/redwing__Training_Plan_Access_Request__c/redwing__Training_Plan_Access_Request__c.object-meta.xml
<CustomObject>
    <label>Learning Plan Access Request</label>
    <nameField>
        <displayFormat>LPAR-{0000000}</displayFormat>
        <label>Learning Plan Access Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Plan Access Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>