force-app/main/default/objects/redwing__Training_Plan_Access_Request__c/fields/redwing__Approver_Comments__c.field-meta.xml
<CustomField>
    <fullName>redwing__Approver_Comments__c</fullName>
    <label>Approver Comments</label>
    <type>TextArea</type>
</CustomField>