force-app/main/default/objects/redwing__Training_Plan_Access_Request__c/fields/redwing__Comments__c.field-meta.xml
<CustomField>
    <fullName>redwing__Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>