force-app/main/default/objects/redwing__Training_Plan_Access_Request__c/fields/redwing__Training_Plan__c.field-meta.xml
<CustomField>
    <fullName>redwing__Training_Plan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Learning Plan</label>
    <referenceTo>redwing__Training_Plan__c</referenceTo>
    <relationshipLabel>Learning Plan Access Requests</relationshipLabel>
    <relationshipName>Training_Plan_Access_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>